Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124512

QProcess::startCommand crash if empty string is passed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.9, 6.7.1, 6.8.0 FF
    • 6.0, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7
    • Core: I/O
    • None
    • 60bdf2b22 (dev), d24b0c05a (6.7), b492063e8 (tqtc/lts-6.5)

      The application crashes when `QProcess::startCommand()` is called with empty string or whitespace-only string. Qt tries to remove first element of empty list.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes